--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,16 +1,21 @@
 name: CI
-# Controls when the workflow will run
 on:
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  push:
+    branches:
+      - 'main'
+      - 'releases/**'
 jobs:
   first_job:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Run a one-line script
-        run: echo Hello, world!
-      - name: Run a one-line script
-        run: echo done, bye
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+          cache: 'maven'
+          cache-dependency-path: 'sub-project/pom.xml' # optional
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
