--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '21'
+          overwrite-settings: false
           cache: 'maven'
           cache-dependency-path: 'sub-project/pom.xml' # optional
       - name: Build with Maven
